// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Рендер кнопки Заблокированная кнопка рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary undefined undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Рендер кнопки Кнопка c текстом рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary undefined undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Текст для теста
  </p>
</button>
`;

exports[`Рендер кнопки Кнопка без текста рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary undefined undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Рендер кнопки Кнопка во время загрузки рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary undefined undefined undefined "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    src="test-file-stub"
  />
</button>
`;
